# commit-suicide

./: CMakeLists.txt
src/: Log.cpp  Log.h  main.cpp
